Fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,12 @@ header {
 main {
     background-color: var(--PowderBlue);
     height: 100%;
+    overflow: auto;
 }
 
 .mainContainer {
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 .addNewBook {
